[gd_scene load_steps=22 format=3 uid="uid://ce4ydmycoux7o"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_6twv0"]
[ext_resource type="Texture2D" uid="uid://cflvf46f6vjnj" path="res://icon.svg" id="1_a5yg6"]
[ext_resource type="Script" path="res://scenes/attack.gd" id="3_erv2y"]
[ext_resource type="Texture2D" uid="uid://cns51rs8fjwua" path="res://assets/art/player sprites/idle/1.png" id="3_gfv1o"]
[ext_resource type="Texture2D" uid="uid://dfqr8gsnlxdwr" path="res://assets/art/knife_01.png" id="4_e380e"]
[ext_resource type="Texture2D" uid="uid://b5hlnpqwj740d" path="res://assets/art/player sprites/idle/2.png" id="4_ks8k5"]
[ext_resource type="Texture2D" uid="uid://dpmlrc2eqr65i" path="res://assets/art/player sprites/idle/3.png" id="5_pv54q"]
[ext_resource type="Texture2D" uid="uid://dv7h3wt7j6axa" path="res://assets/art/player sprites/idle/4.png" id="6_0cvxg"]
[ext_resource type="Texture2D" uid="uid://b7eovgt07ilkn" path="res://assets/art/player sprites/idle/5.png" id="7_2bamw"]
[ext_resource type="Texture2D" uid="uid://c0e0qku8epg3b" path="res://assets/art/player sprites/idle/6.png" id="8_2wxow"]
[ext_resource type="Texture2D" uid="uid://dl02nooputxni" path="res://assets/art/player sprites/walk/1.png" id="9_r0fjf"]
[ext_resource type="Texture2D" uid="uid://dcwdmup5tj20u" path="res://assets/art/player sprites/walk/2.png" id="10_ctqj4"]
[ext_resource type="Texture2D" uid="uid://dcajqcna6nn0b" path="res://assets/art/player sprites/walk/3.png" id="11_i0lmd"]
[ext_resource type="Texture2D" uid="uid://cr8rcfehngjex" path="res://assets/art/player sprites/walk/4.png" id="12_d24ct"]
[ext_resource type="Texture2D" uid="uid://dhygg0gjbu1co" path="res://assets/art/player sprites/walk/5.png" id="13_81qsh"]
[ext_resource type="Texture2D" uid="uid://da8sq78fymetm" path="res://assets/art/player sprites/walk/6.png" id="14_0to1s"]
[ext_resource type="Texture2D" uid="uid://cu220u8rvpls7" path="res://assets/art/player sprites/walk/7.png" id="15_t7fes"]
[ext_resource type="Texture2D" uid="uid://cm80d101dsvf3" path="res://assets/art/player sprites/walk/8.png" id="16_ldp2a"]

[sub_resource type="SpriteFrames" id="SpriteFrames_clcnc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_a5yg6")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_a5yg6")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_gfv1o")
}, {
"duration": 1.0,
"texture": ExtResource("4_ks8k5")
}, {
"duration": 1.0,
"texture": ExtResource("5_pv54q")
}, {
"duration": 1.0,
"texture": ExtResource("6_0cvxg")
}, {
"duration": 1.0,
"texture": ExtResource("7_2bamw")
}, {
"duration": 1.0,
"texture": ExtResource("8_2wxow")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_a5yg6")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_r0fjf")
}, {
"duration": 1.0,
"texture": ExtResource("10_ctqj4")
}, {
"duration": 1.0,
"texture": ExtResource("11_i0lmd")
}, {
"duration": 1.0,
"texture": ExtResource("12_d24ct")
}, {
"duration": 1.0,
"texture": ExtResource("13_81qsh")
}, {
"duration": 1.0,
"texture": ExtResource("14_0to1s")
}, {
"duration": 1.0,
"texture": ExtResource("15_t7fes")
}, {
"duration": 1.0,
"texture": ExtResource("16_ldp2a")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7wm5j"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lo6qp"]
size = Vector2(53, 10)

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_6twv0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-8.9407e-07, 2.32458e-06)
scale = Vector2(0.03125, 0.03125)
sprite_frames = SubResource("SpriteFrames_clcnc")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7wm5j")

[node name="DashDuration" type="Timer" parent="."]
wait_time = 0.1

[node name="AttackDuration" type="Timer" parent="."]
wait_time = 0.1

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -100)

[node name="RotationCenter" type="Marker2D" parent="."]

[node name="Attack" type="Area2D" parent="RotationCenter"]
position = Vector2(40, 1)
script = ExtResource("3_erv2y")

[node name="Sprite2D" type="Sprite2D" parent="RotationCenter/Attack"]
position = Vector2(16, -0.999998)
rotation = 0.785398
scale = Vector2(-2.5, 2.5)
texture = ExtResource("4_e380e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RotationCenter/Attack"]
position = Vector2(18.5, -1)
shape = SubResource("RectangleShape2D_lo6qp")

[connection signal="attack_started" from="." to="RotationCenter/Attack" method="_on_player_attack_started"]
[connection signal="timeout" from="DashDuration" to="." method="_on_dash_duration_timeout"]
[connection signal="timeout" from="AttackDuration" to="." method="_on_attack_duration_timeout"]
[connection signal="timeout" from="AttackDuration" to="RotationCenter/Attack" method="_on_attack_duration_timeout"]
[connection signal="body_entered" from="RotationCenter/Attack" to="RotationCenter/Attack" method="_on_body_entered"]
